[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name="day_5"
path="src/day_5.rs"

[[bin]]
name="day_6"
path="src/day_6.rs"


[[bin]]
name="day_7"
path="src/day_7.rs"


[[bin]]
name="day_8_part1"
path="src/day_8_part1.rs"


[[bin]]
name="day_8_part2"
path="src/day_8_part2.rs"



[[bin]]
name="day_9_part1"
path="src/day_9_part1.rs"


[[bin]]
name="day_9_part2"
path="src/day_9_part2.rs"
