[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name="day_1_part1"
path="src/day_1_part1.rs"

[[bin]]
name="day_1_part2"
path="src/day_1_part2.rs"

[[bin]]
name="day_2_part1"
path="src/day_2_part1.rs"

[[bin]]
name="day_2_part2"
path="src/day_2_part2.rs"

[[bin]]
name="day_3_part1"
path="src/day_3_part1.rs"

[[bin]]
name="day_3_part2"
path="src/day_3_part2.rs"

[[bin]]
name="day_5_part1"
path="src/day_5_part1.rs"

[[bin]]
name="day_5_part2"
path="src/day_5_part2.rs"

[[bin]]
name="day_6_part1"
path="src/day_6_part1.rs"

[[bin]]
name="day_6_part2"
path="src/day_6_part2.rs"


[[bin]]
name="day_7_part1"
path="src/day_7_part1.rs"

[[bin]]
name="day_7_part2"
path="src/day_7_part2.rs"

[[bin]]
name="day_8_part1"
path="src/day_8_part1.rs"


[[bin]]
name="day_8_part2"
path="src/day_8_part2.rs"



[[bin]]
name="day_9_part1"
path="src/day_9_part1.rs"


[[bin]]
name="day_9_part2"
path="src/day_9_part2.rs"


[[bin]]
name="day_10_part1"
path="src/day_10_part1.rs"


[[bin]]
name="day_10_part2"
path="src/day_10_part2.rs"



[[bin]]
name="day_11_part1"
path="src/day_11_part1.rs"


[[bin]]
name="day_11_part2"
path="src/day_11_part2.rs"
